# MeshFix-V2.1

./: CMakeLists.txt  README.txt
bin64/: README_EXECUTABLE.txt
include/Kernel/: basics.h  coordinates.h  graph.h  heap.h  jqsort.h  list.h  matrix.h  point.h  tmesh_kernel.h
include/TMesh/: detectIntersections.h  edge.h  marchIntersections.h  tin.h  tmesh.h  triangle.h  vertex.h
src/Algorithms/: checkAndRepair.cpp  detectIntersections.cpp  holeFilling.cpp  marchIntersections.cpp  subdivision.cpp
src/Kernel/: coordinates.cpp  graph.cpp  heap.cpp  jqsort.cpp  list.cpp  matrix.cpp  orientation.c  point.cpp  tmesh.cpp
src/MeshFix/: meshfix.cpp
src/TMesh/: edge.cpp  io.cpp  tin.cpp  triangle.cpp  vertex.cpp
vc12/: MeshFix_All.sln  kernel.vcxproj  meshfix.vcxproj  tmesh.vcxproj
